@@ -20,7 +20,8 @@ Or install it yourself as:
 
 ## Usage
 
-TODO: Write usage instructions here
+    ## daemon start
+    $ bundle exec jruby -J-Xmx2048m -J-server -J-XX:+UseConcMarkSweepGC hlog_etl.rb --logfile /tmp/hdfs_etl.log --daemon >/tmp/hlog_etl.out 2>&1 &
 
 ## Contributing
 
